--- a/sale_order_type/i18n/fr.po
+++ b/sale_order_type/i18n/fr.po
@@ -9,15 +9,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-01-27 03:53+0000\n"
-"PO-Revision-Date: 2018-01-27 03:53+0000\n"
+"POT-Creation-Date: 2021-02-16 11:47+0000\n"
+"PO-Revision-Date: 2021-02-16 12:49+0100\n"
 "Last-Translator: guillaume bauer <guillaume.bauer@syentys.com>, 2017\n"
 "Language-Team: French (https://www.transifex.com/oca/teams/23907/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 2.3\n"
 
 #. module: sale_order_type
 #: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__journal_id
@@ -59,6 +60,11 @@ msgstr "Description"
 #: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__display_name
 msgid "Display Name"
 msgstr "Afficher le nom"
+
+#. module: sale_order_type
+#: model_terms:ir.ui.view,arch_db:sale_order_type.sot_sale_order_type_form_view
+msgid "Documents"
+msgstr "Documents"
 
 #. module: sale_order_type
 #: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__sequence_id
@@ -140,21 +146,20 @@ msgid "Sale Order Type"
 msgstr "Type de bon de commande"
 
 #. module: sale_order_type
+#: model:ir.model.fields,field_description:sale_order_type.field_account_file_document__sale_type_id
 #: model:ir.model.fields,field_description:sale_order_type.field_account_move__sale_type_id
 msgid "Sale Type"
 msgstr "Type de vente"
 
 #. module: sale_order_type
 #: model:ir.model,name:sale_order_type.model_sale_order
-#, fuzzy
 msgid "Sales Order"
-msgstr "Bon de commande"
+msgstr "Commande de vente"
 
 #. module: sale_order_type
 #: model:ir.model,name:sale_order_type.model_sale_order_line
-#, fuzzy
 msgid "Sales Order Line"
-msgstr "Bon de commande"
+msgstr "Ligne de commande de vente"
 
 #. module: sale_order_type
 #: model:ir.actions.act_window,name:sale_order_type.sot_sale_order_type_action
@@ -171,11 +176,12 @@ msgstr "Politique d'expédition"
 #. module: sale_order_type
 #: model:ir.model.fields,help:sale_order_type.field_sale_order_type__company_id
 msgid "The company is automatically set from your user preferences."
-msgstr ""
-"La société est automatiquement définie selon vos préférences utilisateur."
+msgstr "La société est automatiquement définie selon vos préférences utilisateur."
 
 #. module: sale_order_type
 #: model:ir.model.fields,field_description:sale_order_type.field_sale_order__type_id
+#: model_terms:ir.ui.view,arch_db:sale_order_type.sot_invoice_search
+#: model_terms:ir.ui.view,arch_db:sale_order_type.sot_sale_order_search
 #: model_terms:ir.ui.view,arch_db:sale_order_type.sot_sale_order_type_form_view
 #: model_terms:ir.ui.view,arch_db:sale_order_type.sot_sale_order_type_search_view
 msgid "Type"
@@ -185,6 +191,16 @@ msgstr "Type"
 #: model:ir.model,name:sale_order_type.model_sale_order_type
 msgid "Type of sale order"
 msgstr "Type de bon de commande"
+
+#. module: sale_order_type
+#: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__ir_actions_report_id
+msgid "Use report"
+msgstr "Utiliser un rapport"
+
+#. module: sale_order_type
+#: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__mail_template_id
+msgid "Use template"
+msgstr "Utiliser un modèle"
 
 #. module: sale_order_type
 #: model:ir.model.fields,field_description:sale_order_type.field_sale_order_type__warehouse_id
